--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,15 +1,24 @@
 #datasource.host=localhost
-datasource.host=192.168.17.76
-mongo.port=27017  
-mongo.database=cl  
-mongo.username=cl  
-mongo.password=cl  
+mongo.host=192.168.0.104
+mongo.port=27019
+mongo.database=mmap_sb_zxd
+#mongo.username=root
+#mongo.password=root
    
 mongo.connectionsPerHost=8  
-mongo.threadsAllowedToBlockForConnectionMultiplier=4  
-mongo.connectTimeout=1500  
-mongo.maxWaitTime=1500  
-mongo.autoConnectRetry=true  
-mongo.socketKeepAlive=true  
+mongo.threadsAllowedToBlockForConnectionMultiplier=4
+#\u8fde\u63a5\u8d85\u65f6\u65f6\u95f4
+mongo.connectTimeout=15000
+#\u8fde\u63a5\u7b49\u5f85\u65f6\u95f4 
+mongo.maxWaitTime=15000  
+mongo.autoConnectRetry=true
+mongo.socketKeepAlive=true
 mongo.socketTimeout=10000  
-mongo.slaveOk=true  
+
+mongo.maxConnectionIdleTime=1500
+mongo.maxConnectionLifeTime=0
+#mongo slave
+mongo.heartbeatSocketTimeout=1000
+mongo.heartbeatConnectTimeout=1500
+mongo.minHeartbeatFrequency=5
+mongo.heartbeatFrequency=10
