操作数据库

--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -2,6 +2,7 @@
 mongo.host=192.168.0.104
 mongo.port=27019
 mongo.database=mmap_sb_zxd
+replica-set=localhost:27018,localhost:27019,localhost:27020
 #mongo.username=root
 #mongo.password=root
    
