添加mongo 测试，处理数据

--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,12 +1,12 @@
 #datasource.host=localhost
-mongo.host=192.168.0.104
-mongo.port=27019
+#mongo.host=192.168.0.104
+#mongo.port=27019
 mongo.database=mmap_sb_zxd
 replica-set=localhost:27018,localhost:27019,localhost:27020
 #mongo.username=root
 #mongo.password=root
    
-mongo.connectionsPerHost=8  
+mongo.connectionsPerHost=10  
 mongo.threadsAllowedToBlockForConnectionMultiplier=4
 #\u8fde\u63a5\u8d85\u65f6\u65f6\u95f4
 mongo.connectTimeout=15000
