--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
 	<name>Spring Boot Simple Sample</name>
 	<description>Spring Boot Simple Sample</description>
 	<version>0.0.1-SNAPSHOT</version>
+	<packaging>jar</packaging>
 	<url>http://projects.spring.io/spring-boot/</url>
 
 	<organization>
@@ -71,12 +72,33 @@
 			<version>1.2.38</version>
 		</dependency>
 
+		<dependency>
+			<groupId>com.mangofactory</groupId>
+			<artifactId>swagger-springmvc</artifactId>
+			<version>1.0.2</version>
+		</dependency>
+
+		<dependency>
+			<groupId>apache-collections</groupId>
+			<artifactId>commons-collections</artifactId>
+			<version>3.1</version>
+		</dependency>
+
 	</dependencies>
 	<build>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+			</plugin>
+
+			<plugin>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.3</version>
+				<configuration>
+					<source>1.8</source>
+					<target>1.8</target>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
