--- a/pom.xml
+++ b/pom.xml
@@ -78,10 +78,16 @@
 			<version>1.0.2</version>
 		</dependency>
 
+		 <dependency>
+		      <groupId>commons-collections</groupId>
+		      <artifactId>commons-collections</artifactId> 
+		      <version>3.2.1</version> 
+	    </dependency>
+		
 		<dependency>
-			<groupId>apache-collections</groupId>
-			<artifactId>commons-collections</artifactId>
-			<version>3.1</version>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>2.4</version>
 		</dependency>
 
 	</dependencies>
